# plasma-spotlight

./: .gitattributes  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
plasma_spotlight/: __main__.py  bing.py  config.py  kde.py  main.py  spotlight.py  systemd.py  utils.py
